--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="imagenes/dragon.png" />
            Hyperblog
            <span id="tagline">Tu blog de cabecera</span>
         </div>
@@ -16,7 +17,10 @@
             <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a condeerencias o salir en Youtube.
                Exepto si eres un rockstar. Pero estadisticamente no lo eres.... por ahora. </p>
             <p>Suscribete y dale like</p>
-        </div>    
+        </div>
+        <div id="footer">
+            Hecho con amor en Platzi 
+        </div>
     </div>    
     </body>
 </html>
